--- a/Chess.vcxproj
+++ b/Chess.vcxproj
@@ -58,6 +58,10 @@
   <ItemGroup>
     <Image Include="src\piece\spritesheet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="src\piece\capture.wav" />
+    <Media Include="src\piece\move.wav" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
