--- a/Chess.vcxproj.filters
+++ b/Chess.vcxproj.filters
@@ -96,4 +96,12 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="src\piece\move.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="src\piece\capture.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
