--- a/Chess.vcxproj.filters
+++ b/Chess.vcxproj.filters
@@ -103,5 +103,8 @@
     <Media Include="src\piece\capture.wav">
       <Filter>Resource Files</Filter>
     </Media>
+    <Media Include="src\piece\promotion.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
