--- a/Chess.vcxproj.filters
+++ b/Chess.vcxproj.filters
@@ -106,5 +106,8 @@
     <Media Include="src\piece\promotion.wav">
       <Filter>Resource Files</Filter>
     </Media>
+    <Media Include="src\piece\castle.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
